# CGEIHC-P

./: .gitignore  ADAPT-PROMPT.md  CLAUDE.md  FUENTES.md  INFRAESTRUCTURA.md  PENDIENTES.md  README.md  imgui.ini
.claude/context/: reminders.md
.claude/rules/: archivos.md
.claude/skills/consultar-modelos/: SKILL.md  plantilla-prompt-modo-b-gemini.md  plantilla-prompt-modo-b-gpt.md
.claude/skills/editar-documento/: SKILL.md
.claude/skills/editar-documento/scripts/: abrir_caso.py  aplicar_cambios.py  cerrar_caso.py  convertir_pdf.py  generar_plantilla_prueba.py  test_integrado.py  utils.py  validar_ortografia.py
app/: CMakeLists.txt
app/assets/models/: 20953_Igloo_new.mtl  Factory.mtl  broken_pole.fbx
app/shaders/: skybox.frag  skybox.vert  standard.frag  standard.vert  unlit.frag  unlit.vert  water.frag  water.vert
app/src/: main.cpp  main_test.cpp  miniaudio_impl.cpp  stb_impl.cpp
app/src/core/: Input.h  Time.h  Window.h
app/src/graphics/: CameraFPS.h  Mesh.h  Model.h  Shader.h  Skybox.h  Texture.h
app/src/scene/: DecoScene.h  GalleryScene.h  ModuleScene.h  Museum.h  SnowSystem.h
blueprints/: 01-vision-narrativa.md  02-layout-escenario.md  03-catalogo-modelos.md  04-interaccion-controles.md  05-materiales-texturas.md  06-animaciones.md  07-audio.md  08-hud-ui.md  09-orden-desarrollo.md  README.md
despacho/: README.md
despacho/_templates/: caso.yml.template  meta.yml.template
despacho/archivo-historico/: INDICE.md
despacho/casos/2026-000-ejemplo/: README.md  caso.yml
despacho/casos/2026-000-ejemplo/00-input/: instrucciones-v1.md  instrucciones-v2.md
despacho/casos/2026-000-ejemplo/02-borradores/: v1-2026-04-25-1430.diff.md  v2-2026-04-25-1530.diff.md
despacho/entregables/: INDICE.md
despacho/plantillas/: INDICE.md  ejemplo-plantilla-v1.docx  ejemplo-plantilla-v1.meta.yml
docs/knowledge/: INDEX.md
docs/knowledge/methodology/: lecciones-aprendidas-skills.md
docs/knowledge/technology/: auditoria-requisitos.md  especificaciones-proyecto.md  fuentes-datos-museo.md  idea-bocetos-storyboard.md  materiales-curso.md  proyectos-referencia.md
docs/plans/: expectativas-visuales.md  plan-maestro-arquitectura-archivos.md  plan-maestro-desarrollo.md  plan-maestro-integracion-assets.md  plan-mejoras-visuales.md  plan-modelos-3d.md  plan-pruebas-infraestructura.md  plan-qa-v2.md  plan-qa-visual.md
docs/plans/blueprints/: plan-construccion-blueprints.md
docs/plans/skill-editar-documento/: PLAN.md
docs/reports/: guion-video.md  report-en.md  reporte-es.md
docs/reviews/auditoria-plan-desarrollo/prompts/: consulta-01-auditoria-plan-gemini.md  consulta-01-auditoria-plan-gpt.md
docs/reviews/auditoria-plan-desarrollo/reportes/: consulta-01-auditoria-plan-gemini.md  consulta-01-auditoria-plan-gpt.md  reporte-01-sintesis.md
docs/reviews/plan-implementacion-consulta/prompts/: consulta-01-plan-implementacion-gemini.md  consulta-01-plan-implementacion-gpt.md  consulta-01-plan-implementacion.md
docs/reviews/plan-implementacion-consulta/reportes/: consulta-01-plan-implementacion-gemini.md  consulta-01-plan-implementacion-gpt.md
docs/reviews/revision-modelos-3d/prompts/: consulta-03-modelos-gemini.md  consulta-03-modelos-gpt.md
docs/reviews/revision-modelos-3d/reportes/: consulta-03-gemini.md  consulta-03-modelos-gemini.md  consulta-03-modelos-gpt.md
docs/reviews/revision-plan-assets/prompts/: consulta-01-workflows-autonomos-gemini.md  consulta-01-workflows-autonomos-gpt.md
docs/reviews/revision-plan-assets/reportes/: consulta-01-workflows-autonomos-gemini.md  consulta-01-workflows-autonomos-gpt.md
docs/reviews/revision-qa-v2/prompts/: consulta-02-qa-visual-gemini.md  consulta-02-qa-visual-gpt.md
docs/reviews/revision-qa-v2/reportes/: consulta-02-qa-visual-gemini.md  consulta-02-qa-visual-gpt.md
entregables/: bitacora-mejoras.md
scripts/: gen_ifp.py  gen_report_pdf.py  generar_celebracion.py  generar_modelos_lowpoly.py  generar_narraciones.py  generar_pinturas.py
setup/: env-tools.sh  herramientas-instaladas.md
